--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="shortening">
         <form action="javascript">
           <input type="text" name="shoter-grabber" id="shorten" placeholder="Shorten a link here...">
-          <input type="submit" value="Shorten It!" class="btn">
+          <input type="submit" value="Shorten It!" class="btn" id="shorten-btn">
         </form>
       </div>
       <menu class="shorted--links">
@@ -178,7 +178,7 @@
   
   
   
-  
+    <script src="script.js"></script>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
