--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
 
     <section class="short">
       <div class="shortening">
-        <form action="javascript">
+        <form>
           <input type="text" name="shoter-grabber" id="shorten" placeholder="Shorten a link here...">
-          <input type="submit" value="Shorten It!" class="btn" id="shorten-btn">
+          <button type="button" class="btn" id="shorten-btn">Shorten It!</button>
         </form>
       </div>
       <menu class="shorted--links">
-        <li class="shorted--link">
+        <!-- <li class="shorted--link">
           <span>frontendmentor.io</span>
-          <span><a href="#">short.com</a>
-            <a href="#" class="btn">copy</a></span>
-        </li>
+          <span><a href="#" ><input type="text" name="link" class="shortlink" value="short.com"> </a>
+            <a href="#" class="btn btn-c">copy</a></span>
+        </li> -->
       </menu>
     </section>
 
@@ -178,7 +178,7 @@
   
   
   
-    <script src="script.js"></script>
+    <script src="script.js"></script> 
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
