--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
     <section class="short">
       <div class="shortening">
-        <form>
-          <input type="text" name="shoter-grabber" id="shorten" placeholder="Shorten a link here...">
+        <form class="form">
+          <input  class="" type="text" name="shoter-grabber" id="shorten" placeholder="Shorten a link here...">
           <button type="button" class="btn" id="shorten-btn">Shorten It!</button>
         </form>
       </div>
@@ -173,11 +173,6 @@
     </section>
   </footer>
 
-  
-
-  
-  
-  
     <script src="script.js"></script> 
   
   <div class="attribution">
