--- a/index.html
+++ b/index.html
@@ -35,9 +35,23 @@
       <a href="#">Login</a>
       <a href="#" class="btn">Sign Up</a>
     </menu>
-    <figure class="mobile"> <!--css is gonna input the image-->
-     
-    </figure>
+    <input type="checkbox" name="drop-menu" id="hamburguer-menu">
+    <label for="hamburguer-menu">
+
+      <figure class="mobile"> 
+
+      </figure>
+
+  </label>
+  <menu class="mobile__menu">
+    <ul>
+      <li><a href="#">Features</a></li>
+      <li><a href="#">Pricing</a></li>
+      <li><a href="#">Resources</a></li>
+      <li class="top-border"><a href="#" >Login</a></li>
+      <li class="btn-C"><a href="#" class=" btn-h">Sign Up</a></li>
+    </ul>
+  </menu>
   </header>
 
   <main>
