--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <a href="#" class="btn">Sign Up</a>
     </menu>
     <input type="checkbox" name="drop-menu" id="hamburguer-menu">
-    <label for="hamburguer-menu">
+    <label for="hamburguer-menu" class="label-btn">
 
       <figure class="mobile"> 
 
